[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
flate2 = "1.0.35"                                # compression
futures-util = "0.3.31"
hex = "0.4.3"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["stream"] }
sha1 = "0.10.6"
thiserror = "1.0.38"                             # error handling
tokio = { version = "1", features = ["full"] }
